# b2b-rewards-platform-solana

./: LICENSE  README.md
.github/workflows/: build-backend.yaml  build-frontend.yaml
b2brp-backend/: .gitignore  Cargo.toml  Dockerfile  entrypoint.sh  package.json  push_db.sh
b2brp-backend/kubernetes/: b2brp-backend-ingress.yaml  b2brp-backend-secret-sample.yaml  b2brp-backend-svc.yaml  b2brp-backend.yaml
b2brp-backend/prisma/: schema.prisma
b2brp-backend/src/: main.rs  schema.rs
b2brp-backend/src/api/: dto.rs  mod.rs  private_api.rs  public_api.rs
b2brp-backend/src/core/: error.rs
b2brp-backend/src/db/: mod.rs  models.rs  models_create.rs
b2brp-backend/src/middleware/: auth_middleware.rs
b2brp-frontend/: Dockerfile  package.json  tsconfig.json
b2brp-frontend/kubernetes/: b2brp-frontend-ingress.yaml  b2brp-frontend-svc.yaml  b2brp-frontend.yaml
b2brp-frontend/src/: App.vue
b2brp-solana-contract/: Anchor.toml
b2brp-solana-contract/assets/: example.json
b2brp-solana-contract/programs/b2brp-solana-contract/: Cargo.toml
b2brp-solana-contract/programs/b2brp-solana-contract/src/: lib.rs
b2brp-solana-contract/tests/: b2brp-solana-contract.ts
gratie-company-license-nft/: Anchor.toml  package.json
gratie-company-license-nft/assets/: company-license-sample.json
gratie-company-license-nft/tests/: gratie-company-license-nft.ts
gratie-frontend/: index.html  package.json
gratie-frontend/kubernetes/: gratie-frontend-ingress.yaml  gratie-frontend-svc.yaml  gratie-frontend.yaml
gratie-frontend/src/: App.vue  main.ts
mint-nft/: Anchor.toml
(+22 files in other folders)
