[package]
name = "b2brp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
diesel = { version = "2", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = { version = "4", features = ["rustls"] }
actix-service = "2.0"
anyhow = "1"
futures-util = "0.3"
jwt = "0.16"
log = "0.4"
env_logger = "0.10"
dotenvy = "0.15"
sha2 = "0.10.6"
hmac = "0.12.1"
rand = "0.8.4"
rust-argon2 = "1"
base64 = "0.21"
